--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 model-builder = {path = "../model_builder", develop = true}
+fastui = "^0.5.2"
 
+
+[tool.poetry.group.prd.dependencies]
+uvicorn = "^0.29.0"
 
 [build-system]
 requires = ["poetry-core"]
